# kovaaks_progression_tracker

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: windows-portable.yml
docs/: contributing.md  data-format.md  provider-limitations.md  windows-release.md  windows-target.md
docs/release/: WINDOWS_PORTABLE_README.txt
fixtures/benchmarks/: starter_static.json  viscose_s2.json  voltaic_s5.json  xyz_smoothness.json
fixtures/stats/: 1wall6targets_small.csv  malformed.csv  pasu_small_reload.csv
scripts/: package-windows-portable.ps1
src/: main.tsx  styles.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: benchmarks.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  parser.rs  providers.rs
src/components/: AppShell.tsx  MetricCard.tsx  RunChart.tsx
src/lib/: api.ts  queries.ts  types.ts
src/routes/: BenchmarksPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  ScenarioPage.tsx
tests/e2e/: app.spec.ts
